--- a/.github/workflows/sphinx.yaml
+++ b/.github/workflows/sphinx.yaml
@@ -21,8 +21,15 @@ jobs:
     - uses: actions/checkout@v4
       with:
         persist-credentials: false
-    - name: Build HTML
-      uses: ammaraskar/sphinx-action@master
+    - name: Upgrade pip, install package, install requirements, build docs
+      run: |
+        pip install --upgrade pip
+        pip install .
+        pip install -r ./docs/requirements.txt
+        pip install sphinx
+        sphinx-build docs ./docs/_build/html/
+    # - name: Build HTML
+    #   uses: ammaraskar/sphinx-action@master
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
