--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ select = [
     "F", # pyflakes
     "E", # pycodestyle
     "I", # isort
+    "B", # flake8-bugbear
 ]
 unfixable = [
     "F401",
