--- a/.github/workflows/install-package.yml
+++ b/.github/workflows/install-package.yml
@@ -28,4 +28,4 @@ jobs:
         pip install -e .
     - name: Test with pytest
       run: |
-        pytest -v tests/test_simulation_script.py::test_simulation
+        pytest
