update badge in coverage CI

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -62,8 +62,8 @@ jobs:
         uses: schneegans/dynamic-badges-action@v1.7.0
         with:
             auth: ${{ secrets.PYTEST_COVERAGE_COMMENT }}
-            gistID: 5e90d640f8c212ab7bbac38f72323f80
-            filename: pytest-coverage-comment__main.json
+            gistID: d6b0645fa035119a53bb6356d169c98b
+            filename: quvac_coverage_badge.json
             label: Coverage Report
             message: ${{ steps.coverageComment.outputs.coverage }}
             color: ${{ steps.coverageComment.outputs.color }}
